--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
-        <string name="display">显示</string>
+    <string name="display">显示</string>
     <string name="hint">隐藏</string>
+    
+    <string name="drawer_open">menu</string>
+    <string name="drawer_close">demo</string>
     
     <string-array name="left_menu">
         <item>ArrayAdapter</item>
