--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
-    <string name="display">显示</string>
+    <string name="show">显示</string>
     <string name="hint">隐藏</string>
     
     <string name="drawer_open">menu</string>
